# kiv-fjp-project

./: .gitignore  README.md  input_test.txt  install_linux.sh  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  lang_types.py  names.py  types.py  util.py
app/analyzers/: __init__.py
app/analyzers/lex/: __init__.py  token_definitions.py  token_specifications.py
app/analyzers/syntax/: __init__.py  rules.py
app/java/: cls.py  code.py  descriptor.py  opcode.py  util.py
app/java/classfile/: access.py  attribute.py  classfile.py  code.py  constantpool.py  method.py  opcode.py
app/lex/: __init__.py  rules.py
app/sem/: __init__.py  analyze.py  predefined.py  types.py
app/syntax/: __init__.py  ast.py  rules.py
compiler/: __main__.py  cli.py  util.py
compiler/lex/: __init__.py  defs.py  rules.py
compiler/sem/: __init__.py  analyze.py  predefined.py
compiler/syntax/: __init__.py  rules.py
examples/: bubble_sort_multi_dim  calculator  quicksort
inputs/: calculator  fibonacci_coding  input_test.txt  input_test_1.txt  input_test_2.txt  input_test_3.txt  input_test_4.txt  read_write
sometool/: __init__.py  cli.py
