[tool.poetry]
name = "kiv-fjp-project"
version = "0.1.0"
description = ""
authors = ["Miroslav Krýsl <krysl@students.zcu.cz>", "Tomáš Květoň <kvetont@students.zcu.cz>"]

[tool.poetry.dependencies]
python = "^3.9.0"
click = "^7.1.2"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
